<resources>
    <string name="app_name" translatable="false">Animal Guide</string>
    <string name="guide_subtitle_header" translatable="false">Guide</string>
    <string name="guia_certo_para_seu_pet_text_header">O Guia certo para seu Pet</string>
    <string name="email_login" translatable="false">Email</string>
    <string name="forgot_password_login">Esqueceu a senha?</string>
    <string name="button_access">Entrar</string>
    <string name="login_google_button">Entrar com o Google</string>
    <string name="create_account_login">Não tem conta? Cadastre-se</string>
    <string name="password_login">Senha</string>
    <string name="exception_login_user_not_exist">Usuário não encontrado. Verifique seus dados e tente novamente.</string>
    <string name="exception_email_password_login">Email ou Senha incorretos.</string>
    <string name="error_login">Não foi possiver realizar seu Login no sistema:</string>
    <string name="text_view_alert_dialog_login">Efetuando Login</string>
    <string name="text_view_alert_dialog_splash_login">Carregando Dados</string>
    <string name="text_choose_user_activity">Olá, Seja Bem Vindo. O Animal Guide foi desenvolvido para ajudar você e outros usuários. Então, antes de prosseguir, escolha o tipo de usuário que você utilizará no aplicativo.</string>
    <string name="owner_pet_text">Dono(a) de Pet</string>
    <string name="student_veterinary_text">Veterinário Universitário(a)</string>
    <string name="student_account_text">Estudante</string>
    <string name="veterinary_text">Veterinário(a)</string>
    <string name="ong_text">ONG para Animais</string>
    <string name="ong_account_text" translatable="false">ONG</string>
    <string name="name_last_name">Nome e Sobrenome</string>
    <string name="clear_fields_owner">Limpar Campos</string>
    <string name="register_owner">Cadastre-se</string>
    <string name="title_toolbar_owner">Cadastro do Dono</string>
    <string name="exception_save_user_owner_database">Erro ao salvar usuário no Banco de Dados:</string>
    <string name="name_college_student">Nome da Faculdade</string>
    <string name="title_toolbar_student">Cadastro Universitário</string>
    <string name="name_college_veterinary">Faculdade onde se formou</string>
    <string name="title_toolbar_veterinary">Cadastro Veterinário</string>
    <string name="name_ong">Nome da ONG</string>
    <string name="title_toolbar_ongs">Cadastro ONG</string>
    <string name="exception_name_last_name_register_owner">Insira seu Nome e Sobrenome</string>
    <string name="message_toast_exception_register_owner">Preencha o campo com os dados Solicitados</string>
    <string name="exception_email_register_owner">Insira seu Email</string>
    <string name="exception_password_register_owner">Insira sua Senha</string>
    <string name="exception_photo_user_owner">Erro ao inserir foto de perfil:</string>
    <string name="title_alert_permissions_register_owner">Permissões Negadas</string>
    <string name="button_confirm_alert_register_owner">Confirmar</string>
    <string name="message_alert_register_owner">Para realizar seu cadastro de maneira correta é necessário aceitar as permissões exigidas pelo aplicativo.</string>
    <string name="exception_password_register">Insira uma senha contendo letras e números</string>
    <string name="exception_email_register">Por favor, insira um e-mail válido!</string>
    <string name="exception_email_exists_register">Esse email já foi cadastrado, favor inserir outro e-mail!</string>
    <string name="exception_web_register">Verifique sua conexão com a internet e tente novamente!</string>
    <string name="exception_register_user">Erro ao efetuar cadastro:</string>
    <string name="text_progress_bar_register_owner">Cadastrando…</string>
    <string name="message_toast_sucess_register_user">Cadastro realizado com Sucesso! Para finalizá-lo confirme sua conta no link enviado para o Email que você inseriu ao se cadastrar.</string>
    <string name="error_save_photo_firebase_register">Erro ao salvar Foto no Firebase:</string>
    <string name="exception_storage_firebase_register">Erro ao acessar FirebaseStorage:</string>
    <string name="title_alert_dialog_insert_photo_register">Inserir Foto</string>
    <string name="message_alert_dialog_insert_photo_register">Deseja finalizar seu cadastro sem inserir uma Foto?</string>
    <string name="button_positive_alert_dialog_insert_photo_register">Sim</string>
    <string name="button_negative_alert_dialog_insert_photo_register">Não</string>
    <string name="title_alert_dialog_customized">Selecionar foto de Perfil</string>
    <string name="btn_open_gallery_dialog">Abrir Galeria</string>
    <string name="btn_open_camera_dialog">Abrir Câmera</string>
    <string name="btn_cancel_dialog">Cancelar</string>
    <string name="sucess_insert_photo_camera">Imagem inserida com Sucesso!</string>
    <string name="text_ok_alert_login_offline" translatable="false">OK</string>
    <string name="title_dialog_login_offline">Falha ao entrar</string>
    <string name="message_dialog_login_offline">Não foi possivel fazer Login. Verifique sua conexão com a Internet.</string>
    <string name="exception_password_register_ong">Insira o nome da ONG</string>
    <string name="loading_login_google">Verificando Dados</string>
    <string name="exception_get_type_account">Erro ao pegar tipo da Conta do Usuário no Banco de Dados</string>
    <string name="exception_acess_firebase_class_get_type_account">Erro ao acessar FirebaseDatabase:</string>
    <string name="exception_signIn_google">Erro ao conectar-se com o Google:</string>
    <string name="exception_auth_google_signIn">Erro ao autenticar-se no sistema com sua conta do Google: </string>
    <string name="exception_connect_servidor_google">Erro ao conectar-se com os servidores do Google:</string>
    <string name="id_google_cloud_client" translatable="false">643957408603-0a5n87od0i5noiqjuc4f7uteleb5fm2n.apps.googleusercontent.com</string>
    <string name="text_forgot_password">Insira no campo abaixo o email de cadastro associado à sua conta no Animal Guide.</string>
    <string name="text_email_forgot_password">Email registrado no Animal Guide</string>
    <string name="title_toolbar_forgot_password">Esqueci minha Senha</string>
    <string name="text_check_email_forgot_password">Favor verificar sua caixa de emails.\nVocê receberá instruções para gerar\numa nova senha.</string>
    <string name="btn_text_send_solicitation_forgor_password">Enviar Solicitação</string>
    <string name="text_forgot_password_empty">Insira seu Email</string>
    <string name="message_toast_forgot_password">Insira seu email para poder redefinir sua Senha.</string>
    <string name="messase_toast_exception_forgot_password">Ocorreu um erro ao tentar enviar o link para seu Email:</string>
    <string name="title_alert_forgot_password">Aviso</string>
    <string name="message_alert_forgot_password">Acesse seu E-mail, siga as instruções e sua senha será alterada.</string>
    <string name="text_button_account_changed">Entrar com outra conta</string>
    <string name="text_button_register_account">Cadastre-se</string>
    <string name="text_button_enter_account">Entrar</string>
    <string name="text_button_remove_account">Remover</string>
    <string name="erro_retriveing_accounts_system">Erro ao recuperar contas salvas no aplicativo:</string>
    <string name="type_user_student_adapter_accounts">Estudante</string>
    <string name="type_user_ong_adapter_accounts">Dono(a) de ONGs</string>
    <string name="text_aviso_check_internet">Parece que seu dispositivo está sem acesso à internet. Por favor, verifique sua conexão e tente novamente.</string>
    <string name="text_button_check_internet">Tentar Novamente</string>
    <string name="text_snack_bar_login_check_internet">Não há acesso a internet. Por favor, verifique sua conexão e tente realizar login novamente.</string>
    <string name="text_snack_bar_login_check_internet_logout">Não há acesso a internet. Por favor, verifique sua conexão e tente sair do app novamente.</string>
    <string name="text_snack_bar_register_check_internet">Não há acesso a internet. Por favor, verifique sua conexão e tente se cadastrar novamente.</string>
    <string name="title_ic_feed_menu_navigation_bottom" translatable="false">Feed</string>
    <string name="title_ic_pesquisar_menu_navigation_bottom">Pesquisar</string>
    <string name="title_ic_maps_menu_navigation_bottom">Mapa</string>
    <string name="title_ic_likes_menu_navigation_bottom">Notificações</string>
    <string name="title_ic_menu_navigation_bottom" translatable="false">Menu</string>
    <string name="text_name_user_menu">Nome do Usuário</string>
    <string name="text_open_profile">Visualizar Perfil</string>
    <string name="btn_amigos_menu">Amigos</string>
    <string name="btn_blogs_menu" translatable="false">Blogs</string>
    <string name="btn_eventos_menu">Eventos</string>
    <string name="btn_pets_menu" translatable="false">Pets</string>
    <string name="btn_videos_menu" translatable="false">Vídeos</string>
    <string name="btn_help_menu">Ajuda</string>
    <string name="btn_settings_menu">Configurações</string>
    <string name="btn_sobre_menu">Sobre</string>
    <string name="btn_logout_menu">Sair</string>
    <string name="exception_photo_menu">Ocorreu um erro ao tentar recuperar sua foto de perfil</string>
    <string name="exception_accounts_user_database">Erro ao tentar recuperar os dados da sua conta:</string>
    <string name="exception_accounts_user_name_ong">Erro ao tentar recuperar nome da ONG do Banco de Dados:</string>
    <string name="text_title_save_password_login">Lembrar Informações de Login?</string>
    <string name="text_aviso_save_dados_login">Salvando as informações do seu login, você não precisará inseri-las quando efetuar o login novamente. Só precisará clicar em sua foto.</string>
    <string name="btn_not_save_password">Agora Não</string>
    <string name="btn_save_password">Salvar</string>
    <string name="exception_save_password_shared_preference">Ocorreu uma falha ao salvar as informações do seu Login:</string>
    <string name="exception_update_status_dados_login">Erro ao alterar Status do Login no Banco de Dados:</string>
    <string name="text_alert_shared_preferences_password">Salvando Informações do seu Login</string>
    <string name="title_dialog_permissions">Permitir que o Animal Guide use\na câmera e o armazenamento do seu telefone?</string>
    <string name="title_aviso_dialog_permissions">Para poder tirar fotos ou escolher uma salva em seu dispositivo, permita que o Animal Guide acesse sua câmera e fotos.</string>
    <string name="title_ativar_dialog_permissions">Para ativar, clique em Configurações, Permissões e ative a Câmera e o Armazenamento.</string>
    <string name="text_open_settings_permissions">Configurações</string>
    <string name="permission_negada">Permissão Negada</string>
    <string name="exception_database_logout">Ocorreu um erro ao tentar sair do Aplicativo:</string>
    <string name="exception_relogin">Ocorreu um erro ao tentar reautenticar sua conta:</string>
    <string name="exception_check_database_save_login">Ocorreu um erro ao tentar recuperar os dados da sua Conta:</string>
    <string name="dialog_text_exit">Saindo</string>
    <string name="dialog_text_relogin">Entrando</string>
    <string name="title_dialog_remove_account">Remover conta</string>
    <string name="text_public_privacidade_postagens">Público</string>
    <string name="title_dialog_privacidade_posts">Quem pode ver suas publicações</string>
    <string name="message_public_postagem">Qualquer usuário pode visualizar</string>
    <string name="text_privacidade_friends_postagens">Amigos</string>
    <string name="message_friends_postagem">Seus amigos no Animal Guide</string>
</resources>