<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardBackgroundColor="#FFF">

    <LinearLayout
        android:id="@+id/linearLayoutPhotoAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewAdapterAccountsUser"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/photo_profile" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutObjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextAdapterEmailAccountsUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAdapterEmailAccountsUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/email_login"
                android:inputType="textImeMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewAdapterTypeAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonEnterAccount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorAccent"
                android:text="@string/text_button_enter_account"
                android:textAllCaps="false"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/buttonRemoveAccount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorAccent"
                android:text="@string/text_button_remove_account"
                android:textAllCaps="false"
                android:textColor="#FFF" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>